--- a/style.css
+++ b/style.css
@@ -3,6 +3,22 @@
 	margin: 5px;
 }
 
-.col {
+#first-row {
 	margin-top: 5%;
+}
+
+.col {
+	margin-top: 10px;
+	margin-left: 2%;
+}
+
+.col-sm- {
+	margin-top: 10px;
+	padding: 15px;
+}
+
+@media screen and (max-width: 768px) {
+	#first-row {
+		margin-top: 14%;
+	}
 }
